@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050320
+releasedate		20050322
 
 ##############################################################################
 # host dependent configuration
