@@ -1,3 +1,9 @@
+03/22/2005
+----------
+1. fix the bug that addressbook entries added with 'quickadd' button
+   won't have the X-OWM-CHARSET attribute
+
+
 03/20/2005
 ----------
 1. remove 'show inbox unread message count' option from prefs
